@@ -8,6 +8,9 @@ Changes - Apache mod_perl change logfile
 
 =item 1.16_01-dev
 
+Apache::URI->parse($r) without a $url argument will create a "self" url 
+from $r->uri
+
 Apache::Registry will now allow DirectoryIndex to work even when
 ExecCGI is off. [ Ari Jolma <ajolma@ahti.hut.fi> / Ask Bjoern Hansen
 <ask@netcetera.dk> ]
